force-app/main/default/objects/Property_Unit__c/Property_Unit__c.object-meta.xml
<CustomObject>
    <label>Unit</label>
    <nameField>
        <displayFormat>UDD-{0000}</displayFormat>
        <label>Unit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>