force-app/main/default/objects/Property_Unit__c/fields/Occupied__c.field-meta.xml
<CustomField>
    <fullName>Occupied__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Occupied</label>
    <type>Checkbox</type>
</CustomField>